--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       "Landing-Seize.png", "Landing-Skincare.png", "Landing-suin.jpg",
       "Landing-Urbanium.png",  "Mobile-Martin.png", "Mobile-Road.png",
       "Dash-Com.jpg", "Dash-Journey.png", "Dash-Mini.png",
-      "Dash-Responsive.png", "Dash-Welcom.png", "Product.jpg"
+      "Dash-Responsive.png", "Dash-Welcom.png", "Product.jpg",
+      "Product-bag.png", "Product-book1.jpg", "Product-book2.jpg",
+      "Product-color.jpg", "Product-skin1.jpg", "Product-skin2.jpg",
+      "Product-skin3.jpg", "Product-skin4.jpg"
     ],
     folder: 'imgs/',
     // autoplay: 'yes',
